# python-rmfiles

./: LICENSE  Pipfile  README.md  entry_points.cfg  setup.cfg  tox.ini
src/python_rmfiles/: cli.py
tests/: test_python_rmfiles.py
