[metadata]
name = python_rmfiles
version = attr: python_rmfiles.__version__
author = TATEISHI Tadatoshi
author_email = ishio39@gmail.com
licence_file = LICENSE

[options]
packages = find:
packages_dir =
    = src
entry_points = file: entry_points.cfg
install_requires =
    fire

[options.packages.find]
where = src
